Wrapper, autoboxing, unboxing and parsing.